--- a/Gopsel/TimHieuThanhKinh/Resources/01.Audio.md
+++ b/Gopsel/TimHieuThanhKinh/Resources/01.Audio.md
@@ -29,3 +29,21 @@ loại thống nhất như sau:
 * (200) [Chân Giả Luận Hà Nội](https://soundcloud.com/huynh-christian-timothy/sets/200_changialuanhanoi)
 * (201) [Chân Giả Luận Saigon](https://soundcloud.com/huynh-christian-timothy/sets/201_changialuansaigon)
 * (202) [Thi Thiên Ngâm Vịnh](https://soundcloud.com/huynh-christian-timothy/sets/202_thithienngamvinh)
+
+Hướng Dẫn Tải Về Bài Giảng Từ SoundCloud & Lưu Trữ Vào Thẻ Nhớ/USB:
+
+Bước 1: Trên máy ví tính mọi người cần tạo sẳn một thư mục gốc đặt tên là 
+BaiGiang (Hình 01) -> bấm vào trong thư mục BaiGiang, tiếp tục tạo và đặt tên 
+các thư mục theo đúng tên chủ đề (Hình 02)
+
+![](https://lh6.googleusercontent.com/x--kKdF7THQZARr2VfWQ-oNG5OS-Hqp_pZ2jgpSAgqsGdpbmnc88ghA1sNvfpybtnR7dsECQvSUJyhhKw9S9tdVjgr2EacxqlkGtVpowZPvR9MX_a9wY5jzpr3dX2eBCaQ)
+
+Bước 2: Sau đó bấm vào Links của chủ đề cần tải về. (Danh sách liệt kê bên trên)
+Bước 3: Di chuyển chuột đến bài cần tải -> bấm vào nút Download (xem hình minh họa bên dưới)
+Bước 4: Lưu trữ vào thẻ nhớ/USB
+
+Lưu toàn phần: Copy thư mục gốc BaiGiang vào thẻ nhớ/USB.
+
+Lưu có chọn lọc: Tùy theo nhu cầu, mọi người copy lần lượt từng thư mục con theo từng chủ đề vào thẻ nhớ/USB.
+
+*CHÚ Ý QUAN TRỌNG:* Phải thực hiện lệnh Copy trên thư mục rồi Paste cả thư mục vào thẻ nhớ/USB, không được thực hiện lệnh Copy trên nhiều files. Làm như vậy các thiết bị đọc thẻ nhớ/USB mới đọc theo đúng thứ tự bài giảng.
