--- a/Gopsel/TimHieuThanhKinh/Resources/01.Audio.md
+++ b/Gopsel/TimHieuThanhKinh/Resources/01.Audio.md
@@ -1,4 +1,4 @@
-## I. Các Bài Giảng Thánh Kinh, Thần Học; Các Bài Làm Chứng, Chia Sẻ:
+## Các Bài Giảng Thánh Kinh, Thần Học; Làm Chứng, Chia Sẻ:
 
 Để tiện cho việc lưu trữ các bài giảng MP3, cháu liệt kê danh sách các 
 bài giảng, bài làm chứng, chia sẻ của chú Tim và Hội Thánh đã được phân
